openturns/1.26/_sources/auto_data_analysis/graphics/plot_visualize_clouds.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "auto_data_analysis/graphics/plot_visualize_clouds.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_auto_data_analysis_graphics_plot_visualize_clouds.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_auto_data_analysis_graphics_plot_visualize_clouds.py:


Visualize clouds
================

.. GENERATED FROM PYTHON SOURCE LINES 7-8

In this example we are going to draw clouds of points from a data sample.

.. GENERATED FROM PYTHON SOURCE LINES 10-13

.. code-block:: Python

    import openturns as ot
    import openturns.viewer as otv








.. GENERATED FROM PYTHON SOURCE LINES 14-15

Create 2-d samples to visualize

.. GENERATED FROM PYTHON SOURCE LINES 15-22

.. code-block:: Python

    N = 500
    R = ot.CorrelationMatrix(2)
    R[0, 1] = -0.7
    # 2d N(1,1) with correlation
    sample1 = ot.Normal([1.0] * 2, [1.0] * 2, R).getSample(N)
    sample2 = ot.Normal(2).getSample(N)  # 2d N(0,1) independent








.. GENERATED FROM PYTHON SOURCE LINES 23-24

Create cloud drawables

.. GENERATED FROM PYTHON SOURCE LINES 24-33

.. code-block:: Python

    cloud1 = ot.Cloud(sample1, "blue", "fsquare", "First Cloud")
    cloud2 = ot.Cloud(sample2, "red", "fsquare", "Second Cloud")

    # Then, assemble it into a graph
    myGraph2d = ot.Graph("2d clouds", "x1", "x2", True, "upper right")
    myGraph2d.add(cloud1)
    myGraph2d.add(cloud2)
    view = otv.View(myGraph2d)




.. image-sg:: /auto_data_analysis/graphics/images/sphx_glr_plot_visualize_clouds_001.svg
   :alt: 2d clouds
   :srcset: /auto_data_analysis/graphics/images/sphx_glr_plot_visualize_clouds_001.svg
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 34-35

Create a 3-d sample

.. GENERATED FROM PYTHON SOURCE LINES 35-43

.. code-block:: Python

    mean = [0.0] * 3
    sigma = [2.0, 1.5, 1.0]
    R = ot.CorrelationMatrix(3)
    R[0, 1] = 0.8
    R[1, 2] = -0.5
    N = 500
    sample3 = ot.Normal(mean, sigma, R).getSample(N)








.. GENERATED FROM PYTHON SOURCE LINES 44-45

Draw clouds pairs

.. GENERATED FROM PYTHON SOURCE LINES 45-49

.. code-block:: Python

    graph3 = ot.VisualTest.DrawPairs(sample3)
    graph3.setTitle("3d clouds")
    view = otv.View(graph3)




.. image-sg:: /auto_data_analysis/graphics/images/sphx_glr_plot_visualize_clouds_002.svg
   :alt: 3d clouds
   :srcset: /auto_data_analysis/graphics/images/sphx_glr_plot_visualize_clouds_002.svg
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 50-51

.. code-block:: Python

    otv.View.ShowAll()








.. _sphx_glr_download_auto_data_analysis_graphics_plot_visualize_clouds.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_visualize_clouds.ipynb <plot_visualize_clouds.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_visualize_clouds.py <plot_visualize_clouds.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_visualize_clouds.zip <plot_visualize_clouds.zip>`
